tests/baselines/reference/doNotElaborateAssignabilityToTypeParameters.errors.txt
doNotElaborateAssignabilityToTypeParameters.ts(3,3): error TS2322: Type 'Yadda | Awaited<T>' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'Yadda | Awaited<T>'.


==== doNotElaborateAssignabilityToTypeParameters.ts (1 errors) ====
    async function foo<T>(x: T): Promise<T> {
      let yaddable = await getXOrYadda(x);
      return yaddable;
      ~~~~~~
!!! error TS2322: Type 'Yadda | Awaited<T>' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'Yadda | Awaited<T>'.
    }
    
    interface Yadda {
      stuff: string,
      things: string,
    }
    
    declare function getXOrYadda<T>(x: T): T | Yadda;
    